software/components/airflow/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: airflow
  labels:
    toolkit.fluxcd.io/tenant: dev-team
